--- a/iestimate.html
+++ b/iestimate.html
@@ -3,42 +3,10 @@
         <title>iEstimate</title>
 
         <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;"/>
-        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta name="apple-mobile-web-app-capable" content="yes"/>
 
-        <link rel="stylesheet" href="iestimate_ui/iui.css" type="text/css" />
-        <script type="text/javascript" src="iestimate_ui/iui.js">//</script>
+        <link rel="stylesheet" href="iestimate.css" type="text/css"/>
 
-        <style type="text/css">
-
-            body {
-                font-family: Helvetica, Arial, sans-serif;
-                text-align: center;
-                background: #000;
-                color: #fff;
-            }
-
-
-            table {
-                border-collapse: collapse;;
-                width: 100%;
-            }
-
-            #number {
-                text-align: center;
-                font-size: 220px;
-                color: tomato;
-                padding-top:20%;
-            }
-
-            td {
-                text-align: center;
-                cursor: pointer;
-                border: 1px solid #333;
-                padding: 36px 20px;
-                font-size: 46px;
-            }
-
-        </style>
         <script type="text/javascript" src="http://code.jquery.com/jquery-1.4.2.min.js">//</script>
         <script type="text/javascript">
 
